# the-ball-game

./: .gitignore  GEMINI.md  LICENSE  README.md  database.py  main.py  pyproject.toml  welcome_screen.py
data/: players.json  teams.json
game/: __init__.py  manager.py
model/: __init__.py  database.py  entities.py
ui/: __init__.py  dialogs.py  diamond.py  screens.py
